Process Hacker

2.13
 * NEW/IMPROVED:
   * Added copy support to PE viewer
   * Added Connect Time, Disconnect Time and Last Input Time 
     to session properties
   * Added more working set counters to the Statistics tab
 * FIXED:
   * Column sort arrows
   * CPU usage calculations

2.12
 * NEW/IMPROVED:
   * Updated KProcessHacker for Windows 7 SP1
   * Added elevation support for more actions
   * Added ability to disable plugins
   * Updated ToolStatus plugin
   * Added Remote Control for sessions
   * More command line options
 * FIXED:
   * Memory leaks
   * Run As issues with different sessions

2.11
 * NEW/IMPROVED:
   * Added WS Watch and other features to ExtendedTools 
     plugin
   * Added WindowExplorer plugin
   * Properties for hidden processes
   * Improved menus
   * Debug console can now be closed without affecting the 
     entire program
 * FIXED:
   * Always on Top issues
   * Hang when setting DEP status of a terminating process
   * Encoding bug in NetworkTools plugin
   * LSA interfacing issues
   * Creating dumps of self

2.10
 * NEW/IMPROVED:
   * KProcessHacker is now signed, so it works on 64-bit 
     systems. Thank you to the ReactOS Foundation.
   * Added Run As Limited User
   * Added CPU, private bytes and I/O history columns
   * Added font selection
   * Slightly improved highlighting configuration
 * FIXED:
   * High DPI support
   * Multi-monitor support in graph tooltips
   * DEP status retrieval
   * ExtendedTools plugin crash
   * Notification icon menu crash
   * Memory leaks
   * Other small bug fixes

2.9
 * NEW/IMPROVED:
   * Added column selection for modules list
   * Added wait analysis for 64-bit systems
   * Added signature verification for modules
   * Added ExtendedTools plugin (Vista and above only) 
     with Disk and Network information
   * Updated ExtendedNotifications plugin: added ability 
     to log events to a file
   * Updated ExtendedServices plugin: new tab on Vista 
     and above