@@ -333,6 +333,7 @@ BOOLEAN PhUiConnectToPhSvc(
                 if (started)
                 {
                     ULONG attempts = 10;
+                    LARGE_INTEGER interval;
 
                     // Try to connect several times because the server may take 
                     // a while to initialize.
@@ -343,7 +344,8 @@ BOOLEAN PhUiConnectToPhSvc(
                         if (NT_SUCCESS(status))
                             break;
 
-                        Sleep(50);
+                        interval.QuadPart = -50 * PH_TIMEOUT_MS;
+                        NtDelayExecution(FALSE, &interval);
                     } while (--attempts != 0);
 
                     // Increment the reference count even if we failed. 
