@@ -594,8 +594,10 @@ static BOOLEAN PhpWaitUntilThreadIsWaiting(
         PVOID processes;
         PSYSTEM_PROCESS_INFORMATION processInfo;
         ULONG i;
+        LARGE_INTEGER interval;
 
-        Sleep(100);
+        interval.QuadPart = -100 * PH_TIMEOUT_MS;
+        NtDelayExecution(FALSE, &interval);
 
         if (!NT_SUCCESS(PhEnumProcesses(&processes)))
             break;
@@ -623,7 +625,8 @@ static BOOLEAN PhpWaitUntilThreadIsWaiting(
         if (isWaiting)
             break;
 
-        Sleep(500);
+        interval.QuadPart = -500 * PH_TIMEOUT_MS;
+        NtDelayExecution(FALSE, &interval);
     }
 
     return isWaiting;
